kubernetes/minikube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: hello.world
    http:
      paths:
      - path: /checkout
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 5000
      - path: /webhook
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 5000
